--- a/hackaclime.cfg
+++ b/hackaclime.cfg
@@ -1,6 +1,16 @@
+[DEFAULT]
+currenttheme = default
+
 [default]
-time = 9, 230, 169     ;All values containing a numerical time
-text = 55, 120, 169    ;All textual values
-title = 237, 198, 69   ;All UI text and most prompts
-error = 214, 64, 69    ;All errors and things with bad connotation or that get your attention
-border = 101, 169, 205 ;Outside border
+time = 9, 230, 169
+text = 55, 120, 169
+title = 237, 198, 69
+error = 214, 64, 69
+border = 101, 169, 205
+
+[blank]
+time = 255, 255, 255
+text = 255, 255, 255
+title = 255, 255, 255
+error = 255, 255, 255
+border = 255, 255, 255
