theme manager and creator

--- a/hackaclime.cfg
+++ b/hackaclime.cfg
@@ -1,5 +1,5 @@
 [DEFAULT]
-currenttheme = default
+currenttheme = blank
 
 [default]
 time = 9, 230, 169
@@ -14,3 +14,11 @@ text = 255, 255, 255
 title = 255, 255, 255
 error = 255, 255, 255
 border = 255, 255, 255
+
+[testtheme]
+time = 0, 255, 255
+text = 255, 0, 255
+title = 255, 255, 255
+error = 255, 0, 0
+border = 127, 127, 127
+
