--- a/hackaclime.cfg
+++ b/hackaclime.cfg
@@ -1,24 +1,109 @@
 [DEFAULT]
-currenttheme = blank
+currenttheme = Pop
+add = monokai, onedark, tokyonight, solarized
 
-[default]
+[Pop]
 time = 9, 230, 169
 text = 55, 120, 169
 title = 237, 198, 69
 error = 214, 64, 69
 border = 101, 169, 205
 
-[blank]
+[White]
 time = 255, 255, 255
 text = 255, 255, 255
 title = 255, 255, 255
 error = 255, 255, 255
 border = 255, 255, 255
 
-[testtheme]
+[that 90s cup]
 time = 0, 255, 255
 text = 255, 0, 255
 title = 255, 255, 255
 error = 255, 0, 0
 border = 127, 127, 127
+
+[CatppuccinMocha]
+time = 148, 226, 213
+text = 249, 226, 175
+title = 205, 214, 244
+error = 243, 139, 168
+border = 108, 112, 134
+
+[CatppuccinLatte]
+time = 220, 138, 120
+text = 223, 142, 29
+title = 92, 95, 119
+error = 210, 15, 57
+border = 239, 241, 245
+
+[Dracula]
+time = 139, 233, 253
+text = 248, 248, 242
+title = 98, 114, 164
+error = 255, 85, 85
+border = 189, 147, 249
+
+[Alucard]
+time = 3, 106, 150
+text = 108, 102, 75
+title = 207, 207, 222
+error = 203, 58, 42
+border = 255, 251, 235
+
+[Adawaita Light]
+time = 46, 194, 126
+text = 120, 174, 237
+title = 255, 255, 255
+error = 192, 28, 40
+border = 250, 250, 250
+
+[Adawaita Dark]
+time = 143, 240, 164
+text = 28, 113, 216
+title = 36, 31, 49
+error = 255, 123, 99
+border = 36, 36, 36
+
+[Gruvbox]
+time = 142, 192, 124
+text = 131, 165, 152
+title = 235, 219, 178
+error = 251, 73, 52
+border = 168, 153, 132
+
+[Rosepine]
+time = 196, 167, 231
+text = 156, 207, 216
+title = 224, 222, 244
+error = 235, 111, 146
+border = 82, 79, 103
+
+[Nord]
+time = 136, 192, 208
+text = 143, 188, 187
+title = 236, 239, 244
+error = 191, 97, 106
+border = 216, 222, 233
+
+[OneDark]
+time = 97, 175, 239
+text = 86, 182, 194
+title = 229, 192, 123
+error = 224, 108, 117
+border = 171, 178, 191
+
+[TokyoNight]
+time = 157, 124, 216
+text = 125, 207, 255
+title = 192, 202, 245
+error = 219, 75, 75
+border = 21, 22, 30
+
+[Solarized]
+time = 42, 161, 152
+text = 211, 54, 130
+title = 147, 161, 161
+error = 220, 50, 47
+border = 101, 123, 131
 
